force-app/main/default/objects/General_Inquiry_HRRT_Tracker__c/General_Inquiry_HRRT_Tracker__c.object-meta.xml
<CustomObject>
    <label>General Inquiry HRRT Tracker</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>General Inquiry HRRT Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Inquiry HRRT Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>