force-app/main/default/objects/General_Inquiry_HRRT_Tracker__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <formula>Case__r.Prospect_Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Number</label>
    <type>Text</type>
</CustomField>