force-app/main/default/objects/General_Inquiry_HRRT_Tracker__c/recordTypes/Gen_Inq_HRRT_Tracker.recordType-meta.xml
<RecordType>
    <fullName>Gen_Inq_HRRT_Tracker</fullName>
    <active>true</active>
    <label>Gen Inq HRRT Tracker</label>
</RecordType>